# leanaura-alpha

./: .gitignore  LICENSE  NOTICE  README.md  next.config.ts  package-lock.json  package.json  todo.md
.github/: FUNDING.yml
apps/api/: Dockerfile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml
apps/api/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: main.py
apps/api/app/routers/: ai_response_routing.py
apps/api/const/: ai_prompts.py
apps/api/controllers/: ai_controller.py
apps/api/controllers/ai_agent/: __init__.py
apps/api/controllers/ai_agent/nodes/: greet.py
apps/api/controllers/ai_agent/nodes/vision/: llava_node.py  ocr_node.py
apps/api/controllers/ai_agent/pipelines/: vision_pipeline.py
apps/api/controllers/ai_agent/state/: __init__.py
apps/api/controllers/ai_agent/tools/: greet.py
apps/api/routers/: ai.py  ai_router.py
apps/api/scripts/: build.py  dev.py  start.py
apps/api/src/api/: __init__.py  main.py
apps/api/src/api/const/: server_info.py
apps/api/src/api/controllers/: ai_controller.py
apps/api/src/api/controllers/ai_agent/: __init__.py  config.py  route.py
apps/api/src/api/controllers/ai_agent/nodes/: greet.py
apps/api/src/api/controllers/ai_agent/pipelines/: vision_pipeline.py
apps/api/src/api/controllers/ai_agent/state/: __init__.py  agent.py
apps/api/src/api/controllers/ai_agent/tools/: greet.py
apps/api/src/api/routers/: ai_agent.py  ai_router.py
apps/api/src/api/routers/ai_agent/: route.py
apps/api/src/api/scripts/: dev.py  start.py
apps/web/: README.md  index.html  (+4 more)
(+78 files in other folders)
