[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langfuse>=3.2.7",
    "langgraph>=0.6.3",
    "openai>=1.97.0",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "segment-anything>=1.0",
    "transformers>=4.55.0",
    "ultralytics>=8.3.174",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
serve = "api:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
